Updated meta tags
... for social media preview.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 <meta name="viewport" content="width=device-width,
 initial-scale=1, shrink-to-fit=no">
 
-<title>Tracking Coronavirus Cases in Maryland</title>
+<!--Primary Meta Tags-->
+<title>Tracking Coronavirus cases in Maryland</title>
+<meta name="title" content="Tracking Coronavirus cases in Maryland">
 <meta name="description" content="Data visualizations and reporting on Covid-19 cases in Maryland">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://halas92.github.io/Coronavirus/">
+<meta property="og:title" content="Tracking Coronavirus Cases in Maryland">
+<meta property="og:description" content="Data visualizations and reporting on Covid-19 cases in Maryland">
+<meta property="og:image" content="graphic1.jpg">
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://halas92.github.io/Coronavirus/">
+<meta property="twitter:title" content="Tracking Coronavirus Cases in Maryland">
+<meta property="twitter:description" content="Data visualizations and reporting on Covid-19 cases in Maryland">
+<meta property="twitter:image" content="graphic1.jpg">
 
 <!-- JQuery Script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
