Updated meta tags, etc.

--- a/van-hollen-town-hall-4-15.html
+++ b/van-hollen-town-hall-4-15.html
@@ -14,13 +14,13 @@ initial-scale=1, shrink-to-fit=no">
 <meta property="og:url" content="https://halas92.github.io/Coronavirus/van-hollen-town-hall-4-15.html">
 <meta property="og:title" content="Van Hollen urges gradual normalization, further federal action in telephone town hall">
 <meta property="og:description" content="Van Hollen Sharfstein town hall April 15">
-<meta property="og:image" content="hero-option2.jpg">
+<meta property="og:image" content="van-hollen-town-hall.jpg">
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://halas92.github.io/Coronavirus/van-hollen-town-hall-4-15.html">
 <meta property="twitter:title" content="Van Hollen urges gradual normalization, further federal action in telephone town hall">
 <meta property="twitter:description" content="Van Hollen Sharfstein town hall April 15">
-<meta property="twitter:image" content="hero-option2.jpg">
+<meta property="twitter:image" content="van-hollen-town-hall.jpg">
 
 <!-- JQuery Script -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -54,7 +54,7 @@ initial-scale=1, shrink-to-fit=no">
   <li>Contact</li>
 </ul></div>
 <li class="nav-icon">
-<a class="icon-link" href="https://halas92.github.io/Portfolio/"><i class="fas fa-home"></i></a>
+<a class="icon-link" href="https://halas92.github.io/Coronavirus/"><i class="fas fa-home"></i></a>
 </li>
 <li class="nav-icon">
 <a class="icon-link" href="https://halas92.github.io/Portfolio/design.html"><i class="fas fa-tablet-alt"></i></a>
@@ -80,9 +80,9 @@ function toggleSidebar(){document.getElementById("sidebar").classList.toggle('ac
 <div id="intro-section">
 <p class="title">Van Hollen urges gradual normalization, further federal action in telephone town hall</p>
 <div class="social">
-<a href="https://www.facebook.com/sharer/sharer.php?u=https://halas92.github.io/Coronavirus/" target=_blank class="social-link"><i class="fab fa-facebook"></i></a>
-<a href="https://twitter.com/intent/tweet?text=https://halas92.github.io/Coronavirus/" target=_blank class="social-link"><i class="fab fa-twitter"></i></a>
-<a href="https://www.linkedin.com/shareArticle?mini=true&url=https://halas92.github.io/Coronavirus/&title=&summary=&source=" target=_blank class="social-link"><i class="fab fa-linkedin-in"></i></a></div>
+<a href="https://www.facebook.com/sharer/sharer.php?u=https://halas92.github.io/Coronavirus/van-hollen-town-hall-4-15.html" target=_blank class="social-link"><i class="fab fa-facebook"></i></a>
+<a href="https://twitter.com/intent/tweet?text=https://halas92.github.io/Coronavirus/van-hollen-town-hall-4-15.html" target=_blank class="social-link"><i class="fab fa-twitter"></i></a>
+<a href="https://www.linkedin.com/shareArticle?mini=true&url=https://halas92.github.io/Coronavirus/van-hollen-town-hall-4-15.html&title=&summary=&source=" target=_blank class="social-link"><i class="fab fa-linkedin-in"></i></a></div>
 <div class="byline" style="text-align: left; margin-bottom: 10px;">April 15, 2020 &bull; by <a href="https://halas92.github.io/Portfolio/" style="text-decoration: underline;">Horus Alas</a></div>
 <!--End intro-->
 
